# alignment

./: .gitignore  .gitmodules  CLAUDE.md  README.md  SYNTHESIS.md  emergent-misalignment-chat.md  moral-injury-notes.md  pyproject.toml  queue.md  requirements.txt
data/: CANONICAL.md  canonical_direction.pt  eval_prompts.txt
paper/: README.md  SKILL.md  paper.md
paper2/: SKILL.md  paper.md
paper3/: README.md  SKILL.md  paper.md
planning/: caml_corpus_design.md  cast_paper_notes.md  conditional-steering-notes.md  em_induction_rust_js_idea.md  h_recognition_amoral_canonical_ablation.md  library-structure.md  sutra-inventory.md  sutra-needs.md  sutra_gate_sketch.md  todo.md
results/: CROSS_SCALE_ANALYSIS.md  POOLED_DIRECTIONS.md  README.md  comparison_v0_v1_prompts.md  convergence_analysis.md  tone_confound_analysis.md
scripts/: aggregate_paper3_results.py  analyze_betley_significance.py  analyze_gate_per_prompt.py  analyze_paper3_significance.py  analyze_tone_confound.py  cast_math_stub.py  compare_v0_v1_prompts.py  derive_learned_counter_direction.py  derive_llama_1b_response.py  derive_llama_8b_quantized.py  derive_llama_8b_response.py  derive_misalignment_directions.py  derive_qwen_0p5b.py  derive_qwen_0p5b_response.py  download_all_models.py  download_canonical_direction.py  download_followup_models.py  download_model_organisms.py  download_sae.py  fetch_external_prompts.py  finetune_realignment.py  generate_betley_responses.py  generate_caml_pilot.py  judge_eval_responses.py  lib_derive.py  normalize_prompts.py  paper_submit_and_fetch.py  pool_directions.py  (+12 more)
(+488 files in other folders)
